adding to gitignore, adding jquery

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
+
 </head>
 <body>
+
+  <!-- Javascript scripts -->
   <script src="./scripts/bundle.js"></script>
+
+
+
 </body>
 </html>
